--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,6 +8,8 @@ body {
   font-family: 'Poppins', Arial, Helvetica, sans-serif;
 }
 
+/* navbar */
+
 nav {
   height: 8vh;
   background-color: #1C1C1C;
@@ -34,6 +36,84 @@ nav	a {
 .hamburger {
   display: none;
 }
+
+/* landing page */
+
+.landing-text1 {
+  position: absolute;
+  color: #FFFFFF;
+  font-size: 100px;
+  top: 20%;
+  left: 10%;
+}
+
+.landing-text2 {
+  position: absolute;
+  color: #FFFFFF;
+  font-size: 200px;
+  top: 40%;
+  left: 10%;
+}
+
+.landing {
+  background: url(../img/Unsplash/header.jpg) right bottom no-repeat, #000000 left top repeat;
+  height: 92vh;
+  background-size: 1000px , auto;
+}
+
+/* dot effect */
+
+.loadingContainer {
+  position: absolute;
+  padding-top: 60px;
+  width: 500px;
+  top: 65%;
+  left: 32%;
+}
+.loadingContainer div {
+  height:40px;
+  width:40px;
+  border-radius:50%;
+  background: #FFFFFF;
+  float:left;
+  margin:0 10px;
+}
+.loadingContainer .ball1 {
+  z-index:1;
+  animation: bounce 2s infinite ease-in-out;
+  -moz-animation: bounce 2s infinite ease-in-out;
+  -webkit-animation: bounce 2s infinite ease-in-out;
+}
+.loadingContainer .ball2 {
+  animation: bounce 2s infinite ease-in-out;
+  -moz-animation: bounce 2s infinite ease-in-out;
+  -webkit-animation: bounce 2s infinite ease-in-out;
+  -webkit-animation-delay: 0.5s;
+  animation-delay: 0.5s;
+}
+.loadingContainer .ball3 {
+  animation: bounce 2s infinite ease-in-out;
+  -moz-animation: bounce 2s infinite ease-in-out;
+  -webkit-animation: bounce 2s infinite ease-in-out;
+  -webkit-animation-delay: 1s;
+  animation-delay: 1s;
+}
+@keyframes bounce {
+  0%,20% {-webkit-transform: translate(0,0);}
+  50% {-webkit-transform: translate(0,-30px);background:#FFFFFF;}
+  80%, 100% {-webkit-transform: translate(0,0);};
+}
+@-moz-keyframes bounce {
+  0%,15% {-moz-transform: translate(0,0);}
+  50% {-moz-transform: translate(0,-30px);background:#FFFFFF;}
+  85%, 100% {-moz-transform: translate(0,0);};
+}
+@-webkit-keyframes bounce {
+  0%,20% {-webkit-transform: translate(0,0);}
+  50% {-webkit-transform: translate(0,-30px);background:#FFFFFF;}
+  80%, 100% {-webkit-transform: translate(0,0);};
+}
+
 
 @media screen and (max-width: 768px) {
 
