--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -18,6 +18,11 @@ nav {
   justify-content: space-around;
 }
 
+.nav-links li a {
+  font-weight: 100;
+  font-size: 14px;
+}
+
 .flex-nav {
   flex: 0 0 600px;
 }
@@ -41,42 +46,54 @@ nav	a {
 
 .landing-text1 {
   position: absolute;
-  color: #FFFFFF;
+  color: #9F9F9F;
   font-size: 100px;
-  top: 20%;
-  left: 10%;
+  top: 80px;
+  left: 70px;
+  animation: fade-in ease 2s;
 }
 
 .landing-text2 {
   position: absolute;
-  color: #FFFFFF;
+  color: #9F9F9F;
   font-size: 200px;
-  top: 40%;
-  left: 10%;
+  top: 170px;
+  left: 70px;
+  animation: fade-in ease 5s;
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 .landing {
-  background: url(../img/Unsplash/header.jpg) right bottom no-repeat, #000000 left top repeat;
+  background: url(../img/Unsplash/header_new.jpg) right bottom no-repeat, #000000 left top repeat;
   height: 92vh;
-  background-size: 1000px , auto;
+  background-size: 500px, auto;
 }
 
 /* dot effect */
 
 .loadingContainer {
-  position: absolute;
+  position: relative;
   padding-top: 60px;
-  width: 500px;
-  top: 65%;
-  left: 32%;
+  width: 100px;
+  top: 375px;
+  left: 450px;
+  animation: fade-in ease 5s;
 }
 .loadingContainer div {
-  height:40px;
-  width:40px;
+  height:20px;
+  width:20px;
   border-radius:50%;
-  background: #FFFFFF;
+  background: #9F9F9F;
   float:left;
-  margin:0 10px;
+  margin:0 5px;
 }
 .loadingContainer .ball1 {
   z-index:1;
@@ -100,22 +117,24 @@ nav	a {
 }
 @keyframes bounce {
   0%,20% {-webkit-transform: translate(0,0);}
-  50% {-webkit-transform: translate(0,-30px);background:#FFFFFF;}
+  50% {-webkit-transform: translate(0,-30px);background:#9F9F9F;}
   80%, 100% {-webkit-transform: translate(0,0);};
 }
 @-moz-keyframes bounce {
   0%,15% {-moz-transform: translate(0,0);}
-  50% {-moz-transform: translate(0,-30px);background:#FFFFFF;}
+  50% {-moz-transform: translate(0,-30px);background:#9F9F9F;}
   85%, 100% {-moz-transform: translate(0,0);};
 }
 @-webkit-keyframes bounce {
   0%,20% {-webkit-transform: translate(0,0);}
-  50% {-webkit-transform: translate(0,-30px);background:#FFFFFF;}
+  50% {-webkit-transform: translate(0,-30px);background:#9F9F9F;}
   80%, 100% {-webkit-transform: translate(0,0);};
 }
 
 
 @media screen and (max-width: 768px) {
+
+  /* navbar */
 
   .hamburger {
     display: block;
@@ -132,7 +151,7 @@ nav	a {
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    z-index: 1;
+    z-index: 2;
   }
 
   .line {
@@ -195,4 +214,31 @@ nav	a {
     pointer-events: all;
   }
 
+  /* landing page */
+
+  .landing {
+    background: url(../img/Unsplash/header_new.jpg) bottom no-repeat, #000000 top repeat;
+    height: 92vh;
+    background-size: 100%;
+  }
+
+  .loadingContainer {
+    position: absolute;
+    left: 250px;
+    top: -128px;
+  }
+
+  .landing-text1 {
+    position: absolute;
+    font-size: 40px;
+    left: 10%;
+    top: 10%;
+  }
+
+  .landing-text2 {
+    position: absolute;
+    font-size: 100px;
+    left: 10%;
+    top: 10px;
+  }
 }
