--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,39 +1,32 @@
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
-
 body {
-  font-family: 'Poppins', Arial, Helvetica, sans-serif;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
 }
-
-/* navbar */
-
 nav {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 8vh;
-  background-color: #1C1C1C;
+  background-color: #1c1c1c;
   display: flex;
   align-items: center;
   justify-content: space-around;
   overflow: hidden;
   z-index: 1;
 }
-
 .flex-nav {
   flex: 0 0 600px;
 }
-
 .nav-links {
   display: flex;
   justify-content: space-around;
   list-style: none;
 }
-
 .nav-links li a {
   display: inline-block;
   padding: 16px;
@@ -41,71 +34,67 @@ nav {
   font-size: 14px;
   margin: auto;
 }
-
-
 .nav-links li:hover {
-  background-color: #9F9F9F;
+  background-color: #9f9f9f;
 }
-
 .nav-links li:hover ~ a {
-  color: #000000;
+  color: #000;
 }
-
-nav	a {
+nav a {
   text-decoration: none;
-  color: #FFFFFF;
+  color: #fff;
 }
-
 .hamburger {
   display: none;
 }
-
-/* landing page */
-
 .landing {
   display: flex;
   align-items: center;
   text-align: left;
   overflow: hidden;
-  background-color: #000000;
+  background-color: #000;
 }
-
 .landing-text {
   flex-basis: 0;
   flex-grow: 1;
   position: relative;
   left: 80px;
-  color: #9F9F9F;
+  color: #9f9f9f;
 }
-
+.landing-logo {
+  flex-basis: 0;
+  flex-grow: 1;
+  position: relative;
+  left: 150px;
+}
+.landing-logo > img {
+  width: 60%;
+}
 .landing .landing-text .landing-text1 {
   font-size: 80px;
   position: relative;
   top: 100px;
   animation: fade-in ease 2s;
 }
-
 .landing .landing-text .landing-text2 {
   font-size: 160px;
   animation: fade-in ease 5s;
 }
-
 .landing-img {
   background: url(../img/Unsplash/header_new.jpg) no-repeat bottom center;
-  background-color: #000000;
+  background-color: #000;
   background-size: 100%;
   flex-basis: 0;
   flex-grow: 1;
   height: 100vh;
 }
-
 .landing-img > div {
   position: relative;
   top: 50%;
-  background: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,1)) no-repeat bottom;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), #000) no-repeat
+    bottom;
   height: 50vh;
 }
- 
 @keyframes fade-in {
   0% {
     opacity: 0;
@@ -114,9 +103,6 @@ nav	a {
     opacity: 1;
   }
 }
-
-/* dot effect */
-
 .landing .landing-text .loadingContainer {
   position: relative;
   top: -113px;
@@ -124,14 +110,13 @@ nav	a {
   width: 100px;
   animation: fade-in ease 5s;
 }
-
 .loadingContainer div {
-  height:20px;
-  width:20px;
-  border-radius:50%;
-  background: #9F9F9F;
-  float:left;
-  margin:0 5px;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  background: #9f9f9f;
+  float: left;
+  margin: 0 5px;
 }
 .loadingContainer .ball1 {
   animation: bounce 2s infinite ease-in-out;
@@ -153,111 +138,121 @@ nav	a {
   animation-delay: 1s;
 }
 @keyframes bounce {
-  0%,20% {-webkit-transform: translate(0,0);}
-  50% {-webkit-transform: translate(0,-30px);background:#9F9F9F;}
-  80%, 100% {-webkit-transform: translate(0,0);};
+  0%,
+  20% {
+    -webkit-transform: translate(0, 0);
+  }
+  50% {
+    -webkit-transform: translate(0, -30px);
+    background: #9f9f9f;
+  }
+  100%,
+  80% {
+    -webkit-transform: translate(0, 0);
+  }
 }
 @-moz-keyframes bounce {
-  0%,15% {-moz-transform: translate(0,0);}
-  50% {-moz-transform: translate(0,-30px);background:#9F9F9F;}
-  85%, 100% {-moz-transform: translate(0,0);};
+  0%,
+  15% {
+    -moz-transform: translate(0, 0);
+  }
+  50% {
+    -moz-transform: translate(0, -30px);
+    background: #9f9f9f;
+  }
+  100%,
+  85% {
+    -moz-transform: translate(0, 0);
+  }
 }
 @-webkit-keyframes bounce {
-  0%,20% {-webkit-transform: translate(0,0);}
-  50% {-webkit-transform: translate(0,-30px);background:#9F9F9F;}
-  80%, 100% {-webkit-transform: translate(0,0);};
+  0%,
+  20% {
+    -webkit-transform: translate(0, 0);
+  }
+  50% {
+    -webkit-transform: translate(0, -30px);
+    background: #9f9f9f;
+  }
+  100%,
+  80% {
+    -webkit-transform: translate(0, 0);
+  }
 }
-
-/* About page section */
-
 .about {
   display: flex;
   text-align: left;
   justify-content: center;
   align-items: center;
-  background-color: #000000;
+  background-color: #000;
   flex-direction: row-reverse;
   flex: 1 1 0px;
 }
-
 .about-img {
   flex: 1;
-  background-color: #000000;
-  background: linear-gradient(to right, rgba(0, 0, 0, 0), rgb(0, 0, 0,1)),
-  url(../img/Unsplash/about.jpg) no-repeat bottom center;
+  background-color: #000;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0), #000),
+    url(../img/Unsplash/about.jpg) no-repeat bottom center;
   background-size: auto 100%;
   height: 100vh;
   width: 100%;
   order: 1;
 }
-
 .gradient-bottom {
   position: relative;
   top: 50%;
-  background: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,1)) no-repeat bottom;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), #000) no-repeat
+    bottom;
   height: 50vh;
 }
-
 .gradient-top {
   position: relative;
-  background: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0)) no-repeat top;
+  background: linear-gradient(to bottom, #000, rgba(0, 0, 0, 0)) no-repeat top;
   top: 0;
   left: 0;
   height: 10%;
 }
-
 .about-text {
   flex: 1;
-  color: #FFFFFF;
-  background-color: #000000;
+  color: #fff;
+  background-color: #000;
 }
-
 .about-text > div {
   margin: 0 20%;
 }
-
 .bar {
-  background-color: #1C1C1C;
+  background-color: #1c1c1c;
   width: 100px;
   height: 5px;
 }
-
 .about-text > div > h1 {
   font-size: 50px;
 }
-
 .about-text > div > p {
   font-size: 1.2rem;
-  color: #9F9F9F;
+  color: #9f9f9f;
 }
-
-/* Portfolio Slider */
-
 .products {
-  background-color: #000000;
-  color: #FFFFFF;
+  background-color: #000;
+  color: #fff;
   position: relative;
   width: 100%;
   text-align: center;
 }
-
 .products-text {
   display: inline-block;
   margin: 0 auto;
   padding: 5%;
 }
-
 .products-text > h1 {
   font-size: 50px;
 }
-
 .carousel {
   position: relative;
   overflow: hidden;
   height: 100vh;
   width: 100%;
 }
-
 .slide {
   position: absolute;
   top: 0;
@@ -267,11 +262,9 @@ nav	a {
   opacity: 0;
   transition: opacity 0.4s ease-in-out;
 }
-
 .slide.current {
   opacity: 1;
 }
-
 .slide .content {
   position: absolute;
   bottom: 70px;
@@ -279,155 +272,183 @@ nav	a {
   opacity: 0;
   width: 600px;
   background-color: rgba(28, 28, 28, 0.5);
-  color: #FFFFFF;
+  color: #fff;
   padding: 35px;
 }
-
 .slide .content h1 {
   margin-bottom: 10px;
 }
-
 .slide.current .content {
   opacity: 1;
   transform: translateX(600px);
   transition: all 0.7s ease-in-out 0.3s;
 }
-
 .buttons button#next {
   position: absolute;
   top: 60%;
   right: 15px;
 }
-
 .buttons button#prev {
   position: absolute;
   top: 60%;
   left: 15px;
 }
-
 .buttons button {
-  border: 2px solid #FFFFFF;
+  border: 2px solid #fff;
   background-color: transparent;
-  color: #FFFFFF;
+  color: #fff;
   cursor: pointer;
   padding: 13px 15px;
   border-radius: 50%;
-  outline: none;
+  outline: 0;
 }
-
 .buttons button:hover {
-  background-color: #FFFFFF;
-  color: #1C1C1C;
+  background-color: #fff;
+  color: #1c1c1c;
 }
-
-/* product images slides */
-
+.buttons button:hover svg {
+  fill: #000;
+}
 .slide:nth-child(1) {
-  background: url(../img/laptop_stand_2.jpg) no-repeat center center/cover;
+  background: url(../img/web/faceshield_1.jpeg) no-repeat center center/cover;
 }
-
 .slide:nth-child(2) {
-  background: url(../img/laptop_stand_1.jpg) no-repeat center center/cover;
+  background: url(../img/web/faceshield_2.jpeg) no-repeat center center/cover;
 }
-
 .slide:nth-child(3) {
-  background: url(../img/personal/helicopter.jpeg) no-repeat center center/cover;
+  background: url(../img/web/maskstrap.jpeg) no-repeat center center/cover;
 }
-
-/* make-space */
-
+.slide:nth-child(4) {
+  background: url(../img/web/phone_stand.jpeg) no-repeat center center/cover;
+}
+.slide:nth-child(5) {
+  background: url(../img/web/lithopane.jpeg) no-repeat center center/cover;
+}
+.slide:nth-child(6) {
+  background: url(../img/web/laptop_stand_1.jpeg) no-repeat center center/cover;
+}
+.slide:nth-child(7) {
+  background: url(../img/web/laptop_stand_2.jpeg) no-repeat center center/cover;
+}
 .make-space {
-  background-color: #000000;
+  background-color: #000;
   padding: 5%;
   width: 100%;
 }
-
-/* Contact Us Page */
-
+.price-list {
+  background-color: #000;
+  color: #fff;
+  position: relative;
+  width: 100%;
+  text-align: center;
+}
+.price-list .price-list-table {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex: 1 1 0px;
+  width: 100%;
+}
+.price-header {
+  display: inline-block;
+  margin: 0 auto;
+  padding: 5%;
+}
+.price-header h1 {
+  font-size: 50px;
+}
+.price-list-table {
+  font-size: 1.2rem;
+  color: #9f9f9f;
+}
+.product-list-div {
+  margin: 0 auto;
+}
+.product-list-ul {
+  list-style-type: none;
+}
+.price-list-div {
+  margin: 0 auto;
+}
+.price-list-ul {
+  list-style-type: none;
+}
+.delivery-charges {
+  text-align: center;
+  font-size: 0.8rem;
+  color: #9f9f9f;
+}
 .contact {
-  background-color: #000000;
-  color: #FFFFFF;
+  background-color: #000;
+  color: #fff;
   display: flex;
 }
-
 .contact-left-img {
   flex: 1;
-  background: url(../img/Unsplash/contact_left.jpg) no-repeat center center/cover;
+  background: url(../img/Unsplash/contact_left.jpg) no-repeat center
+    center/cover;
   height: 100vh;
   width: 100%;
 }
-
 .right-gradient {
   position: relative;
   left: 0;
   top: -10%;
-  background: linear-gradient(to right, rgba(0,0,0,0), rgba(0,0,0,1)) no-repeat left;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0), #000) no-repeat left;
   height: 100vh;
 }
-
 .contact-right-img {
   flex: 1;
-  background: url(../img/Unsplash/contact_right.jpg) no-repeat center center/cover;
+  background: url(../img/Unsplash/contact_right.jpg) no-repeat center
+    center/cover;
   height: 100vh;
   width: 100%;
 }
-
 .left-gradient {
   position: relative;
   top: -10%;
   right: 0;
-  background: linear-gradient(to left, rgba(0,0,0,0), rgba(0,0,0,1)) no-repeat right;
+  background: linear-gradient(to left, rgba(0, 0, 0, 0), #000) no-repeat right;
   height: 100vh;
 }
-
 .gradient-bottom1 {
   position: relative;
   top: -60%;
-  background: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,1)) no-repeat bottom;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), #000) no-repeat
+    bottom;
   height: 50vh;
 }
-
 .contact-middle-text {
   flex: 1;
   margin: auto 0;
   padding: 0 5%;
 }
-
 .contact-middle-text .contact-text > h1 {
   font-size: 50px;
 }
-
 .contact-middle-text > p {
-  color:#9F9F9F;
+  color: #9f9f9f;
   font-size: 1.2rem;
 }
-
-
-/* Quotation Section */
-
 .quotation {
   display: flex;
   flex-direction: column;
-  background-color: #000000;
-  color: #FFFFFF;
+  background-color: #000;
+  color: #fff;
 }
-
 .quotation-text {
   display: inline-block;
   margin: 0 auto;
   padding: 5%;
 }
-
 .quotation-text > h1 {
   font-size: 50px;
 }
-
 .quotation-form {
   margin: 0 auto;
   width: 100%;
   max-width: 425px;
 }
-
 .form-items {
   display: flex;
   flex-direction: column;
@@ -435,141 +456,111 @@ nav	a {
   align-items: flex-start;
   font-size: 1.2rem;
 }
-
 .form-input {
   width: 100%;
   max-width: 425px;
   padding: 15px;
   font-size: 1.2rem;
-
-  outline: none;
+  outline: 0;
   border: none;
   border-radius: 10px;
-  color: #FFFFFF;
-  background: #1C1C1C;
+  color: #fff;
+  background: #1c1c1c;
   transition: all 0.5s;
 }
-
 .form-input:focus {
-  background-color: #FFFFFF;
-  border: none  ;
-  color: #000000;
+  background-color: #fff;
+  border: none;
+  color: #000;
 }
-
 .form-items > label {
   padding: 5px;
-  color: #9F9F9F;
+  color: #9f9f9f;
 }
-
 .form-input-error {
   background-color: #d50000;
-  color: #FFFFFF;
+  color: #fff;
 }
-
 .form-input-error::placeholder {
-  color: #FFFFFF;
+  color: #fff;
 }
-
 .form-upload {
   color: transparent;
 }
-
 input {
   -webkit-appearance: none;
 }
-
 textarea {
   resize: none;
   min-height: 200px;
 }
-
 textarea::placeholder {
   font-size: 1.2rem;
 }
-
 .form-upload::-webkit-file-upload-button {
   visibility: hidden;
   -webkit-appearance: none;
 }
-
 .form-upload::before {
   display: inline-block;
-  content: 'Upload .stl file';
-  outline: none;
+  content: "Upload .stl file";
+  outline: 0;
   border: none;
   border-radius: 10px;
-  color: #9F9F9F;
+  color: #9f9f9f;
   padding: 15px;
   font-size: 1.2rem;
-  background: #1C1C1C;
+  background: #1c1c1c;
   transition: all 0.5s;
 }
-
 .form-error {
   padding: 5px;
   color: #d50000;
   font-size: 1.2rem;
   visibility: hidden;
 }
-
 .form-input-error + .form-error {
   visibility: visible;
 }
-
 .submit-button {
   padding: 15px;
   font-size: 1.2rem;
   width: 100%;
   border: none;
   border-radius: 10px;
-  color: #9F9F9F;
-  background: #1C1C1C;
+  color: #9f9f9f;
+  background: #1c1c1c;
   transition: all 0.5s;
 }
-
 .submit-button:hover {
-  background-color: #09D100;
-  color: #FFFFFF;
+  background-color: #09d100;
+  color: #fff;
 }
-
-/* copyright */
-
 .copyright {
-  background-color: #1C1C1C;
+  background-color: #1c1c1c;
   display: flex;
 }
-
 .negative-space {
   flex: 1;
 }
-
 .copyright-text {
   flex: 1;
-  color: #9F9F9F;
+  color: #9f9f9f;
   text-align: center;
   font-size: 0.8rem;
+  position: relative;
+  bottom: 0;
 }
-
 .credits {
   flex: 1;
-  color: #9F9F9F;
+  color: #9f9f9f;
   text-align: right;
   font-size: 0.8rem;
 }
-
-
-
-
-
 @media screen and (max-width: 768px) {
-
   body {
     font-size: 1.3rem;
   }
-  
-
-  /* navbar */
-
   .hamburger {
     display: block;
     cursor: pointer;
@@ -579,7 +570,6 @@ textarea::placeholder {
     transform: translate(-5%, -50%);
     z-index: 2;
   }
-
   .logo {
     position: absolute;
     left: 50%;
@@ -587,17 +577,15 @@ textarea::placeholder {
     transform: translate(-50%, -50%);
     z-index: 2;
   }
-
   .line {
-    background-color: #FFFFFF;
+    background-color: #fff;
     width: 25px;
     height: 2px;
     margin: 5px;
   }
-
   .nav-links {
     position: fixed;
-    background: #1C1C1C;
+    background: #1c1c1c;
     top: 0;
     left: 0;
     height: 100vh;
@@ -610,76 +598,61 @@ textarea::placeholder {
     transition: all 0.5s ease-out;
     pointer-events: none;
   }
-
   .nav-links li {
     opacity: 0;
   }
-
   .nav-links li a {
     font-size: 1.3rem;
   }
-
-  .nav-links li:nth-child(1){
+  .nav-links li:nth-child(1) {
     transition: all 0.5s ease 0.1s;
   }
-
-  .nav-links li:nth-child(2){
+  .nav-links li:nth-child(2) {
     transition: all 0.5s ease 0.2s;
   }
-
-  .nav-links li:nth-child(3){
+  .nav-links li:nth-child(3) {
     transition: all 0.5s ease 0.3s;
   }
-
-  .nav-links li:nth-child(4){
+  .nav-links li:nth-child(4) {
     transition: all 0.5s ease 0.4s;
   }
-
-  .nav-links li:nth-child(5){
+  .nav-links li:nth-child(5) {
     transition: all 0.5s ease 0.5s;
   }
-
   .nav-links li.fade {
     opacity: 1;
   }
-
   .nav-links.open {
     clip-path: circle(1300px at 10% -10%);
     -webkit-clip-path: circle(1300px at 10% -10%);
     pointer-events: all;
   }
-
-  /* landing page */
-
   .landing {
     flex-direction: column;
     height: 100vh;
   }
-
   .landing-text {
     left: -10px;
   }
-
+  .landing-logo {
+    left: 20%;
+    top: 25%;
+  }
   .landing-img {
     width: 100%;
     flex-basis: 0;
     flex-grow: 1;
   }
-
   .landing .landing-text .landing-text1 {
     font-size: 50px;
-    left: 0px;
+    left: 0;
   }
-
   .landing .landing-text .landing-text2 {
     font-size: 100px;
     position: relative;
     top: 30px;
-    left: 0px;
+    left: 0;
   }
-
-  /* dot effect */
-
   .landing .landing-text .loadingContainer {
     position: relative;
     top: -50px;
@@ -687,77 +660,63 @@ textarea::placeholder {
     width: 100px;
     animation: fade-in ease 5s;
   }
-
-  /* carousel */
-
   .carousel {
     height: 65vh;
   }
-
   .slide .content {
     bottom: -300px;
     left: 0;
     width: 100%;
   }
-
   .slide.current .content {
     transform: translateY(-300px);
   }
-
-
-  /* about section */
-
   .about {
     flex-direction: column;
   }
-
   .about-text {
     margin: 50px 0;
   }
-
-  /* products */
-
   .products-text {
     margin: 50px 0;
   }
-
-  /* product images slides */
-
   .slide:nth-child(1) {
-    background: url(../img/laptop_stand_2_mobile.jpg) no-repeat center center/cover;
+    background: url(../img/mobile/faceshield_1.jpeg) no-repeat center
+      center/cover;
   }
-
   .slide:nth-child(2) {
-    background: url(../img/laptop_stand_1_mobile.jpg) no-repeat center center/cover;
+    background: url(../img/mobile/faceshield_2.jpeg) no-repeat center
+      center/cover;
   }
-
   .slide:nth-child(3) {
-    background: url(../img/personal/helicopter.jpeg) no-repeat center center/cover;
+    background: url(../img/mobile/maskstrap.jpeg) no-repeat center center/cover;
   }
-
-
-  /* contact us */
-
-  /* get quotation */
-
+  .slide:nth-child(4) {
+    background: url(../img/mobile/phone_stand.jpeg) no-repeat center center/cover;
+  }
+  .slide:nth-child(5) {
+    background: url(../img/mobile/lithopane.jpeg) no-repeat center center/cover;
+  }
+  .slide:nth-child(6) {
+    background: url(../img/mobile/laptop_stand_1.jpeg) no-repeat center
+      center/cover;
+  }
+  .slide:nth-child(7) {
+    background: url(../img/mobile/laptop_stand_2.jpeg) no-repeat center
+      center/cover;
+  }
   .form-items {
     margin: 0 5%;
     width: 90%;
   }
-
-  /* copyright */
-
   .copyright {
     flex-direction: column;
   }
-
   .copyright-text {
     flex: 1;
   }
-
   .credits {
     flex: 1;
     text-align: center;
   }
-  
 }
